[package]
name = "umgap"
version = "0.3.3"
authors = ["Felix Van der Jeugt <felix.vanderjeugt@gmail.com>",
           "Stijn Seghers <stijn.seghers@gmail.com>",
           "Niels De Graef <Niels.DeGraef@UGent.be>",
           "Aranka Steyaert <Aranka.Steyaert@UGent.be>",
           "Rien Maertens <maertensrien@gmail.com>"]
description = "The Unipept Metagenomics Analysis Pipeline"
homepage = "https://unipept.ugent.be"
repository = "https://github.com/unipept/umgap"
readme = "README.md"
keywords = ["metagenomics", "transcriptonomics", "bio", "DNA", "unipept"]
categories = ["command-line-utilities", "science"]
license = "MIT"
exclude = ["testdata/*"]

[dependencies]
structopt = "0.2"
clap = "2.32"
csv = "1"
fst = "0.3"
regex = "1.0"
ordered-float = "1.0"
error-chain = "0.12"
lazy_static = "1.1"
serde_json = "1.0"
strum = "0.11.0"
strum_macros = "0.11.0"
rayon = "1.0"
num-bigint = "0.2"
num-traits = "0.2"

[dev-dependencies]
assert_matches = "1.3"
