[package]
name = "umgap"
version = "0.3.1"
authors = ["Felix Van der Jeugt <felix.vanderjeugt@gmail.com>",
           "Stijn Seghers <stijn.seghers@gmail.com>",
           "Niels De Graef <Niels.DeGraef@UGent.be>",
           "Aranka Steyaert <Aranka.Steyaert@UGent.be>",
           "Rien Maertens <maertensrien@gmail.com>"]
description = "The Unipept Metagenomics Analysis Pipeline"

[dependencies]
structopt = "0.2"
clap = "2.32"
csv = "1"
fst = "0.3"
regex = "1.0"
ordered-float = "1.0"
error-chain = "0.12"
lazy_static = "1.1"
serde_json = "1.0"
strum = "0.11.0"
strum_macros = "0.11.0"
rayon = "1.0"

[dev-dependencies]
assert_matches = "1.3"
