[package]
name = "umgap"
version = "0.3.7"
authors = ["Felix Van der Jeugt <felix.vanderjeugt@gmail.com>",
           "Stijn Seghers <stijn.seghers@gmail.com>",
           "Niels De Graef <Niels.DeGraef@UGent.be>",
           "Aranka Steyaert <Aranka.Steyaert@UGent.be>",
           "Rien Maertens <maertensrien@gmail.com>"]
description = "The Unipept Metagenomics Analysis Pipeline"
homepage = "https://unipept.ugent.be"
repository = "https://github.com/unipept/umgap"
readme = "README.md"
keywords = ["metagenomics", "transcriptonomics", "bio", "DNA", "unipept"]
categories = ["command-line-utilities", "science"]
license = "MIT"
include = ["Cargo.toml", "LICENSE", "README.md", "scripts/umgap*.sh", "src/**/*.rs"]
edition = "2018"

[dependencies]
clap = "2.33.0"
csv = "1.1.2"
error-chain = "0.12.4"
fst = "0.3.5"
lazy_static = "1.4.0"
ordered-float = "1.0.2"
rayon = "1.3.0"
regex = "1.3.1"
serde_json = "1.0.44"
structopt = "0.3.23"
strum = "0.17.1"
strum_macros = "0.17.1"
attohttpc = { version = "0.15.0", features = [ "json" ] }

[dev-dependencies]
assert_matches = "1.3.0"
