[package]
name = "unipept"
version = "0.1.0"
authors = ["Felix Van der Jeugt <felix.vanderjeugt@gmail.com>",
           "Stijn Seghers <stijn.seghers@gmail.com>",
           "Niels De Graef <Niels.DeGraef@UGent.be>",
           "Aranka Steyaert <Aranka.Steyaert@UGent.be>"]

[dependencies]
clap = "2.24"
csv = "0.15"
fst = "0.1"
regex = "0.2"
ordered-float = "0.5"
error-chain = "0.10.0"
lazy_static = "0.2"

[dev-dependencies]
assert_matches = "1.1"
